# solana-security-token-standard

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
client/: codama.ts
client/rust/: Cargo.toml
client/rust/src/: error.rs  lib.rs
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/typescript/: .npmignore  package.json  pnpm-lock.yaml  tsconfig.json
docs/: program-instructions.md
examples/verification-program-example/: Cargo.toml  README.md
examples/verification-program-example/src/: lib.rs
idl/: security_token_program.json
program/: Cargo.toml
program/src/: constants.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  merkle_tree_utils.rs  processor.rs  state.rs  test_utils.rs  utils.rs
program/src/instructions/: claim_distribution.rs  convert.rs  create_distribution_escrow.rs  create_rate_account.rs  initialize_mint.rs  mod.rs  split.rs  token_wrappers.rs  update_metadata.rs  verification_config.rs  verify.rs
program/src/instructions/proof_account/: create_proof_account.rs  mod.rs  update_proof_account.rs
program/src/instructions/rate_account/: close_rate_account.rs  create_rate_account.rs  mod.rs  shared.rs  update_rate_account.rs
program/src/instructions/receipt_account/: close_action_receipt_account.rs  close_claim_receipt_account.rs  mod.rs
program/src/modules/: account_checks.rs  constants.rs  mod.rs  operations.rs  shared.rs  token_helpers.rs  utils.rs  verification.rs
program/src/state/: corporate_actions.rs  discriminator.rs  distribution_escrow_authority.rs  mint.rs  mint_authority.rs  mod.rs  program_account.rs  proof.rs  rate.rs  receipt.rs  verification.rs
program/src/token22_extensions/: metadata.rs  metadata_pointer.rs  mod.rs  pausable.rs  permanent_delegate.rs  scaled_ui_amount.rs  transfer_hook.rs
scripts/: build.sh  deploy-transfer-hook.sh  deploy.sh  format.sh  generate-clients.js  setup.sh  test.sh
tests/: Cargo.toml
tests/src/: core_instruction_tests.rs  helpers.rs  integration_tests.rs  lib.rs  operation_tests.rs  operations.rs  verify_workflow_test.rs
tests/src/claim_tests/: claim_distribution_tests.rs  claim_helpers.rs  create_distribution_escrow_tests.rs  merkle_tree_helpers.rs  mod.rs
tests/src/convert_tests/: convert_helpers.rs  convert_tests.rs  mod.rs
tests/src/proof_tests/: create_proof_account_tests.rs  mod.rs  proof_helpers.rs  update_proof_account_tests.rs
tests/src/rate_tests/: close_rate_account_tests.rs  create_rate_account_tests.rs  mod.rs  rate_helpers.rs  update_rate_account_tests.rs
tests/src/receipt_tests/: close_action_receipt_account_tests.rs  close_claim_receipt_account_tests.rs  mod.rs  receipt_helpers.rs
tests/src/split_tests/: mod.rs  split_helpers.rs  split_tests.rs
tests/src/verification_tests/: cpi_mode_tests.rs  introspection_tests.rs  mod.rs  verification_helpers.rs
transfer_hook/: Cargo.toml
transfer_hook/src/: lib.rs
