[workspace]
resolver = "2"
members = ["program", "client/rust", "tests"]

[workspace.package]
version = "0.1.0"
description = "Security Token Standard program for Solana"
authors = ["Hoodies <alexander.odegov@hoodies.team>"]
repository = "https://github.com/hoodieshq/security-token"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Solana
solana-program = "2.1.3"
solana-program-test = "2.1.3"
solana-sdk = "2.1.3"
solana-system-interface = "1.0.0"

# SPL
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = [
    "no-entrypoint",
] }
spl-pod = "0.4.0"

# Core serialization (Token-2022 style)
bytemuck = { version = "1.18.0", features = ["derive"] }

# Error handling
thiserror = "2.0.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

# Development and testing
tokio = { version = "1.41.1", features = ["full"] }

[workspace.metadata.solana]
program-id = "11111111111111111111111111111112"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
