[workspace]
resolver = "2"
members = ["program", "client/rust", "tests"]

[workspace.package]
version = "0.1.0"
description = "Security Token Standard program for Solana"
authors = [""]
repository = "https://github.com/hoodieshq/security-token"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
pinocchio = { git = "https://github.com/Nagaprasadvr/pinocchio.git", rev = "4fb37bb" }
pinocchio-token = { git = "https://github.com/Nagaprasadvr/pinocchio.git", rev = "4fb37bb" }
pinocchio-pubkey = { git = "https://github.com/Nagaprasadvr/pinocchio.git", rev = "4fb37bb" }
pinocchio-system = { git = "https://github.com/Nagaprasadvr/pinocchio.git", rev = "4fb37bb" }
pinocchio-token-2022 = { git = "https://github.com/Nagaprasadvr/pinocchio.git", rev = "4fb37bb" }
pinocchio-log = "0.5.0"
borsh = "0.10.4"
bs58 = "0.4"

# Error handling
thiserror = "2.0.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

# Leave for CI
getrandom = { version = "0.3", features = ["dummy"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
