[workspace]
resolver = "2"
members = ["program", "transfer_hook", "clients/rust", "tests"]

[workspace.package]
version = "0.1.0"
description = "Security Token Standard program for Solana"
authors = ["SSTS Foundation"]
repository = "https://github.com/hoodieshq/security-token"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
pinocchio = "0.9.2"
pinocchio-token = "0.4.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token-2022 = "0.1.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.0"
borsh = "0.10.4"
bs58 = "0.4"
solana-keccak-hasher = { version = "=2.2.1" }
spl-merkle-tree-reference = { version = "=1.0.0" }

# Idl
shank = "0.4.2"
security-token-client = { path = "clients/rust" }

# Error handling
thiserror = "2.0.3"

# Leave for CI
getrandom = { version = "0.3", features = ["dummy"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
