[package]
name = "security-token-program"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "security_token_program"

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token-2022 = { workspace = true }
pinocchio-log = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
