[package]
name = "security-token-program"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "security_token_program"

[features]
default = []
no-entrypoint = []
debug-logs = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token-2022 = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
solana-security-txt = "1.1.2"
thiserror = { workspace = true }
bs58 = { workspace = true }
shank = { workspace = true }
spl-tlv-account-resolution = "0.9.0"
spl-pod = "0.5.0"
bytemuck = "1.14"
solana-keccak-hasher = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
rstest = "0.18"
spl-merkle-tree-reference = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
