[package]
name = "security-token-tests"
version.workspace = true
description = "Integration tests mocks"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
security-token-program = { path = "../program" }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-pod = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
tokio = { workspace = true }
