[package]
name = "security-token-client"
version.workspace = true
description = "Rust client for Security Token Standard"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "security_token_client"

[dependencies]
security-token-program = { path = "../../program" }
pinocchio = { workspace = true }
pinocchio-token-2022 = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }

# Dependencies for generated code (using specific versions since not in workspace)
solana-sdk = "2.3.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-pubkey = "2.4.0"
solana-instruction = "2.3.0"
solana-account-info = "2.3.0"
solana-program-error = "2.2.2"
solana-cpi = "2.2.1"

# Kaigan types for Codama-generated code
kaigan = "0.2.2"

# Additional deps for generated code
num-derive = { workspace = true }
num-traits = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]
