[package]
name = "security-token-client"
version = "1.0.0"
description = "Rust client for the Solana Security Token"
repository = "https://github.com/hoodieshq/security-token"
edition = "2021"

[lib]
name = "security_token_client"

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
fetch = ["dep:solana-client"]
# anchor = ["dep:anchor-lang"]
# anchor-idl-build = ["anchor"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies]
borsh = { workspace = true }
solana-program = "2.1.13"
solana-sdk = "2.1.13"
solana-pubkey = "2.4.0"
solana-instruction = "2.3.0"
solana-account-info = "2.3.0"
solana-program-error = "2.2.2"
solana-cpi = "2.2.1"
solana-client = { version = "2.3.1", optional = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde_with = { version = "3.14.0", optional = true }


# anchor-lang = { version = "0.30.1", optional = true }
